welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:45: error: Unit does not take parameters
		lignea();
                      ^